Weight Gradient tool paints over locked vertex groups #107918

Closed
opened 2023-05-14 03:09:11 +02:00 by Daniel Salazar · 3 comments
Member

System Information
Operating system: Linux-5.19.0-41-generic-x86_64-with-glibc2.36 64 Bits, X11 UI
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.41.03

Blender Version
Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-13 23:11, hash: 018f3dbf8533

Short description of error
Weight Gradient tool paints over locked vertex groups

Exact steps for others to reproduce the error
Weight Gradient.blend
Drag over the monkey.
The active vertex group is locked so it should not be possible to paint over it.

**System Information** Operating system: Linux-5.19.0-41-generic-x86_64-with-glibc2.36 64 Bits, X11 UI Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.41.03 **Blender Version** Broken: version: 3.6.0 Alpha, branch: main, commit date: 2023-05-13 23:11, hash: `018f3dbf8533` **Short description of error** Weight Gradient tool paints over locked vertex groups **Exact steps for others to reproduce the error** [Weight Gradient.blend](/attachments/23830620-2d63-441c-9381-9646f83c4820) Drag over the monkey. The active vertex group is locked so it should not be possible to paint over it.
Daniel Salazar added the
Severity
Normal
Status
Needs Triage
Type
Report
labels 2023-05-14 03:09:12 +02:00
Colin Basnett self-assigned this 2023-05-14 05:53:39 +02:00
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2023-05-14 11:12:17 +02:00
Iliya Katushenock added
Status
Duplicate
and removed
Status
Archived
labels 2023-05-14 11:12:25 +02:00
Blender Bot added
Status
Needs Triage
and removed
Status
Duplicate
labels 2023-05-14 11:13:09 +02:00
Member

As far as I understand, simple if() condition of DG_LOCK_WEIGHT in paint_weight_gradient_exec will fix the problem.
@cmbasnett, want me to submit PR for it?

As far as I understand, simple if() condition of `DG_LOCK_WEIGHT` in `paint_weight_gradient_exec` will fix the problem. @cmbasnett, want me to submit PR for it?
Member

As far as I understand, simple if() condition of DG_LOCK_WEIGHT in paint_weight_gradient_exec will fix the problem.
@cmbasnett, want me to submit PR for it?

Yes that would be good, sorry I got distracted and never followed up on this one.

> As far as I understand, simple if() condition of `DG_LOCK_WEIGHT` in `paint_weight_gradient_exec` will fix the problem. > @cmbasnett, want me to submit PR for it? Yes that would be good, sorry I got distracted and never followed up on this one.
Member

Submitted PR: #108974

Submitted PR: https://projects.blender.org/blender/blender/pulls/108974
Pratik Borhade self-assigned this 2023-06-21 15:16:23 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-27 12:53:38 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107918
No description provided.