Fix #107918: Weight Gradient tool paints over locked vertex groups

Exit the operator code if `DG_LOCK_WEIGHT` flag is set for active vertex
group to avoid painting over locked vertex group