source/blender/blenkernel/intern/object_deform.c
@@ -670,6 +670,14 @@ bool BKE_object_defgroup_check_lock_relative_multi(int defbase_tot,
   return true;
 }
 
+bool BKE_object_defgroup_active_is_locked(const Object *ob)
+{
+  Mesh *me = (Mesh *)ob->data;
+  bDeformGroup *dg = (bDeformGroup *)BLI_findlink(&me->vertex_group_names,
+                                                  me->vertex_group_active_index - 1);
+  return dg->flag & DG_LOCK_WEIGHT;
+}
+
 void BKE_object_defgroup_split_locked_validmap(
     int defbase_tot, const bool *locked, const bool *deform, bool *r_locked, bool *r_unlocked)
 {
